add boogey remaining player command